# eminus

./: .coveragerc  .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  TODO.md  flake.nix  pyproject.toml  pytest.ini  setup.py  tox.ini
A1/: ewald.py  operators.py
A2/: operators.py  poisson.py  sch.py  setup.py  test.py
A2a/: operators.py  setup.py
A3/: Hatoms.py  operators.py  setup.py
A3a/: Hatoms.py  operators.py  setup.py
A3b/: Geatoms.py  operators.py  setup.py
A4/: Geatom.py  operators.py  setup.py
PlaineDFT/: setup.py
PlaineDFT/example/: Ne.py
PlaineDFT/plainedft/: __init__.py  atoms.py  atoms_io.py  constants.py  energies.py  gth_loc.py  gth_nonloc.py  lda_VWN.py  operators.py  plot.py  potentials.py  read_gth.py  scf.py  tools.py  utils.py
PlaineDFT/plainedft.egg-info/: PKG-INFO  top_level.txt
docs/: README.md  backend.rst  changelog.rst  citation.rst  conf.py  examples_builder.py  further.rst  index.rst  installation.rst  introduction.rst  license.rst  modules.rst  nomenclature.rst  overview.rst  references.bib  theory.rst
docs/_images/: README.md
docs/_static/: README.md
docs/_templates/: README.md  custom-class.rst  custom-examples.rst  custom-function.rst  custom-module.rst
docs/logo/: README.md
eminus/: README.md  __init__.py  __init__.pyi  _typing.pyi  atoms.py  atoms.pyi  atoms_io.py  backend.py  backend.pyi  band_minimizer.py  band_minimizer.pyi  bandpath.py  cell.py  cell.pyi  config.py  config.pyi  data.py  data.pyi  dft.py  dft.pyi  domains.py  domains.pyi  energies.py  energies.pyi  exc.py  filehandler.py  gga.py  gga.pyi  gth.py  gth.pyi  io.py  kpoints.py  kpoints.pyi  localizer.py  localizer.pyi  logger.py  logger.pyi  minimizer.py  minimizer.pyi  occupations.py  (+22 more)
eminus/addons/: README.md  __init__.py  fods.py  libxc.py  orbitals.py  viewer.py  workflows.py
eminus/extras/: README.md  __init__.py  __init__.pyi  d3.py  d3.pyi  dftd3.py  dispersion.py  dispersion.pyi  fods.py  fods.pyi  fods_new.py  gui.py  gui.pyi  hdf5.py  hdf5.pyi  jax.py  jax.pyi  kpoints.py  libxc.py  libxc.pyi  symmetry.py  symmetry.pyi  torch.py  torch.pyi  viewer.py  viewer.pyi
eminus/io/: README.md  __init__.py  __init__.pyi  cube.py  cube.pyi  gth.py  gth.pyi  json.py  json.pyi  pdb.py  pdb.pyi  poscar.py  poscar.pyi  traj.py  traj.pyi  xyz.py  xyz.pyi
eminus/pade/: README.md  __init__.py
eminus/pade_gth/: README.md  __init__.py
eminus/psp/: README.md  __init__.py
eminus/xc/: README.md  __init__.py  __init__.pyi  gga_c_chachiyo.py  gga_c_chachiyo.pyi  gga_c_pbe.py  gga_c_pbe.pyi  gga_c_pbe_sol.py  gga_c_pbe_sol.pyi  gga_x_chachiyo.py  gga_x_chachiyo.pyi  gga_x_pbe.py  gga_x_pbe.pyi  gga_x_pbe_sol.py  gga_x_pbe_sol.pyi  lda_c_chachiyo.py  lda_c_chachiyo.pyi  lda_c_chachiyo_mod.py  lda_c_chachiyo_mod.pyi  lda_c_pw.py  lda_c_pw.pyi  lda_c_pw_mod.py  lda_c_pw_mod.pyi  lda_c_vwn.py  lda_c_vwn.pyi  lda_x.py  lda_x.pyi  lda_xc_corr_ksdt.py  lda_xc_corr_ksdt.pyi  lda_xc_gdsmfb.py  lda_xc_gdsmfb.pyi  lda_xc_ksdt.py  lda_xc_ksdt.pyi  utils.py  utils.pyi
examples/: README.md  eminus.mplstyle
examples/00_installation_test/: 00_installation_test.py  README.md
examples/01_installation_test/: 01_installation_test.py  README.rst
examples/01_minimal_example/: README.md
examples/02_minimal_example/: 02_minimal_example.py  README.rst
examples/03_Atoms_objects/: 03_Atoms_objects.py  README.rst
examples/03_atoms_objects/: 03_atoms_objects.py  README.rst
examples/04_DFT_calculations/: 04_DFT_calculations.py  README.rst
examples/04_dft_calculations/: 04_dft_calculations.py  README.rst
examples/05_input_output/: 05_input_output.py  CH4.cube  README.rst
examples/06_advanced_functionalities/: 06_advanced_functionalities.py  README.rst
examples/07_fod_addon/: 07_fod_addon.py  README.rst
examples/07_fod_extra/: 07_fod_extra.py  README.rst
examples/08_visualizer_addon/: 08_visualizer_addon.ipynb  CH4_density.cube  CH4_fods.xyz  README.rst
examples/08_visualizer_extra/: 08_visualizer_extra.ipynb  CH4_density.cube  CH4_fods.xyz  README.rst
examples/09_sic_calculations/: 09_sic_calculations.py  README.rst
examples/10_domain_generation/: 10_domain_generation.ipynb  10_domain_generation.py  README.rst
examples/11_germanium_solid/: 11_germanium_solid.py  README.rst
examples/11_simpledft_examples/: 11_simpledft_examples.py  README.rst
examples/12_germanium_solid/: 12_germanium_solid.py
examples/12_wannier_localization/: 12_wannier_localization.ipynb  README.rst
examples/13_geometry_optimization/: 13_geometry_optimization.py  README.rst
examples/13_wannier_localization/: 13_wannier_localization.ipynb  CH4.xyz  README.rst
examples/14_custom_functionals/: 14_custom_functionals.py  README.rst
examples/14_geometry_optimization/: 14_geometry_optimization.py
examples/15_custom_functionals/: 15_custom_functionals.py  README.rst
examples/15_custom_functionals_spin/: 15_custom_functionals_spin.py  README.rst
examples/18_k_points/: 18_k_points.py  (+1 more)
plainedft/: README.md  __init__.py  atoms.py  atoms_io.py  constants.py  data.py  energies.py  exc.py  gth.py  gth_loc.py  gth_nonloc.py  lda_VWN.py  localize.py  localizer.py  operators.py  potentials.py  read_gth.py  scf.py  tools.py  units.py  utils.py  version.py
plainedft.egg-info/: SOURCES.txt
restructure/: atoms.py  constants.py  example.py  gth.py  operators.py  plot.py  potential.py  scf.py  utils.py
tests/: B-q3  POSCAR.test  README.md  __init__.pyi  conftest.py  pytest.ini  test_atoms.py  test_backend.py  test_band_minimizer.py  test_bandpath.py  test_cell.py  test_config.py  test_data.py  test_dft.py  test_domains.py  test_energies.py  test_ewald.py  test_gga.py  test_gth.py  test_io.py  test_kpoints.py  test_localizer.py  test_logger.py  test_minimizer.py  test_occupations.py  test_operators.py  test_orbitals.py  test_potentials.py  test_scf.py  test_testing.py  test_tools.py  test_units.py  test_utils.py  test_xc.py  test_xc_gdsmfb.py  test_xc_utils.py
(+95 files in other folders)
